--- a/app/src/main/res/layout/activity_find_rival.xml
+++ b/app/src/main/res/layout/activity_find_rival.xml
@@ -55,7 +55,8 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginRight="5dp"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/find_name"
@@ -63,19 +64,20 @@
         </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
 
         <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
-            android:layout_width="75dp"
+            android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginLeft="297dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="3dp"
             android:background="@drawable/register_image_veiw_shape"
             android:gravity="center">
 
-            <com.q20.projectsummer.ui.RoundedImageView
+            <com.q20.projectsummer.Custom.ResponsiveRoundedImageView
+
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:layout_marginLeft="0dp"
                 android:layout_marginTop="0dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:src="@drawable/magnifire" />
         </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
@@ -108,35 +110,36 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginRight="5dp"
                 android:gravity="center"
                 android:maxLines="1"
-                android:text="@string/find_name"
+                android:text="@string/find_chance"
                 android:textSize="@dimen/total_recycler_text_size" />
         </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
 
         <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
-            android:layout_width="75dp"
+            android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginLeft="297dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="3dp"
             android:background="@drawable/register_image_veiw_shape"
             android:gravity="center">
 
-            <com.q20.projectsummer.ui.RoundedImageView
+            <com.q20.projectsummer.Custom.ResponsiveRoundedImageView
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:layout_marginLeft="0dp"
                 android:layout_marginTop="0dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/magnifire" />
+                android:src="@drawable/dice" />
         </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
 
     </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
 
     <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="271dp"
         android:background="@color/colorA15"
@@ -144,7 +147,7 @@
         android:text="@string/friends"
         android:textSize="@dimen/total_recycler_text_size" />
 
-    <FrameLayout
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveFrameLayout
         android:id="@+id/find_rival_fragment_container"
         android:layout_width="379dp"
         android:layout_height="398dp"
