mohammadmahdi push new pages include: find_rival_cardview template activity trophy fragment_find_rival 3 fragments of ranking page 4 fragments of register page and also add responsive edit text

--- a/app/src/main/res/layout/fragment_ranking_page_weekly.xml
+++ b/app/src/main/res/layout/fragment_ranking_page_weekly.xml
@@ -1,13 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.q20.projectsummer.ui.RankingPageWeeklyFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.RecyclerView
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
         android:id="@+id/ranking_page_weekly_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
-</FrameLayout>
+</RelativeLayout>
