--- a/app/src/main/res/layout/activity_find_rival.xml
+++ b/app/src/main/res/layout/activity_find_rival.xml
@@ -10,17 +10,19 @@
     <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/profile_image_rounded_layout_shape">
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
-        android:id="@+id/find_rival_main_profile_image"
-        android:layout_width="43dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginTop="6dp"
-        android:src="@drawable/char_f_15" />
+
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+            android:id="@+id/find_rival_main_profile_image"
+            android:layout_width="43dp"
+            android:layout_height="43dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="6dp"
+            android:src="@drawable/char_f_15" />
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
     <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
         android:id="@+id/find_rival_coin"
         android:layout_width="50dp"
@@ -47,7 +49,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="8dp"
             android:background="@color/colorA17"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="10dp"
+            android:elevation="0dp">
 
             <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:id="@+id/find_rival_find_name_text"
@@ -55,8 +58,8 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="3dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="3dp"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/find_name"
@@ -77,7 +80,7 @@
                 android:layout_height="72dp"
                 android:layout_marginLeft="0dp"
                 android:layout_marginTop="0dp"
-                android:scaleType="fitCenter"
+                android:scaleType="centerInside"
                 android:src="@drawable/magnifire" />
         </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
@@ -110,8 +113,8 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="3dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="3dp"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/find_chance"
