--- a/app/src/main/res/layout/activity_trophy_page.xml
+++ b/app/src/main/res/layout/activity_trophy_page.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     android:background="@color/colorA7"
     tools:context="com.q20.projectsummer.ui.TrophyPageActivity">
     
-    <ImageView
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_gravity="center"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/trophy"
         android:scaleType="centerInside"/>
 
     <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="30dp"
         android:gravity="center"
         android:textSize="@dimen/total_recycler_text_size"
         android:maxLines="1"
         android:text="@string/trophy_text"
         android:textColor="@color/colorA1"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="182dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"/>
 
-    <android.support.v7.widget.RecyclerView
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="487dp"
+        android:layout_marginTop="228dp"
+        android:layout_marginLeft="16dp"
         android:scrollbars="vertical"
         android:id="@+id/trophy_page_recycler_container"/>
-</LinearLayout>
+</RelativeLayout>
