--- a/app/src/main/res/layout/find_rival_cardview_template.xml
+++ b/app/src/main/res/layout/find_rival_cardview_template.xml
@@ -1,59 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ranking_page_cardview_template"
-    android:layout_width="match_parent"
+    android:layout_width="379dp"
     android:layout_height="80dp"
     android:layout_margin="5dp"
-    android:elevation="@dimen/cardview_default_elevation"
-    app:cardCornerRadius="@dimen/btn_radius"
-    app:cardBackgroundColor="@color/colorA13">
+    android:background="@drawable/rounded_layout_shape">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveCardView
             android:id="@+id/find_rival_card_template_cardview"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
+            android:layout_width="283dp"
+            android:layout_height="66dp"
+            android:layout_marginTop="8dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1.0"
             android:background="@color/colorA17"
+            android:elevation="0dp"
             app:cardCornerRadius="10dp">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:id="@+id/find_rival_card_template_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="283dp"
+                android:layout_height="30dp"
                 android:maxLines="1"
                 android:text=""
                 android:textSize="@dimen/total_recycler_text_size"
-                android:layout_margin="5dp"
-                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="3dp"
                 android:gravity="center"/>
-        </android.support.v7.widget.CardView>
+        </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:background="@drawable/register_image_veiw_shape"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="3dp"
-            android:layout_margin="3dp"
+            android:layout_marginLeft="297dp"
+            android:layout_marginTop="3dp"
             android:gravity="center">
 
-            <ImageView
+            <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
                 android:id="@+id/find_rival_card_template_image_view"
                 android:layout_width="57dp"
-                android:layout_height="57dp" />
-        </LinearLayout>
-    </LinearLayout>
+                android:layout_height="57dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="3dp"/>
+        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
-</android.support.v7.widget.CardView>
+</RelativeLayout>
