--- a/app/src/main/res/layout/fragment_find_rival_page.xml
+++ b/app/src/main/res/layout/fragment_find_rival_page.xml
@@ -1,13 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.FindRivalPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.RecyclerView
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/find_rival_recycler"
         android:scrollbars="vertical"/>
-</FrameLayout>
+</RelativeLayout>
