--- a/app/src/main/res/layout/fragment_ranking_page_aroundme.xml
+++ b/app/src/main/res/layout/fragment_ranking_page_aroundme.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,9 +6,9 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <android.support.v7.widget.RecyclerView
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
         android:id="@+id/ranking_page_aroundme_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
-</FrameLayout>
+</RelativeLayout>
