--- a/app/src/main/res/layout/fragment_register_sign_in_orlog_in.xml
+++ b/app/src/main/res/layout/fragment_register_sign_in_orlog_in.xml
@@ -1,30 +1,40 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    android:orientation="horizontal"
-    android:gravity="bottom"
     android:background="@color/colorA7"
     tools:context="com.q20.projectsummer.ui.RegisterSignInORLogInFragment">
 
-        <com.q20.projectsummer.ui.ButtonsWithIrsansFont
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/sign_in_button"
-            android:textSize="@dimen/buttons_text_size"
-            android:layout_weight="1.0"
-            android:layout_margin="3dp"
-            android:background="@drawable/ranking_page_buttons_shape"
-            android:onClick="onFirstSignInClicked"/>
-        <com.q20.projectsummer.ui.ButtonsWithIrsansFont
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/log_in_button"
-            android:textSize="@dimen/buttons_text_size"
-            android:layout_weight="1.0"
-            android:layout_margin="3dp"
-            android:background="@drawable/ranking_page_buttons_shape"
-            android:onClick="onSecondSignInClicked"/>
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+        android:layout_width="155dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="605dp"
+        android:background="@drawable/ranking_page_buttons_shape"
+        android:onClick="onFirstSignInClicked"/>
+    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:text="@string/sign_in_button"
+        android:textSize="@dimen/buttons_text_size"
+        android:layout_marginTop="610dp"
+        android:layout_marginLeft="21dp"
+        android:gravity="center"/>
 
-</LinearLayout>
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="605dp"
+        android:layout_marginLeft="213dp"
+        android:background="@drawable/ranking_page_buttons_shape"
+        android:onClick="onSecondSignInClicked"/>
+    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        android:layout_width="171dp"
+        android:layout_height="30dp"
+        android:text="@string/log_in_button"
+        android:textSize="@dimen/buttons_text_size"
+        android:layout_marginTop="610dp"
+        android:layout_marginLeft="218dp"
+        android:gravity="center"/>
+
+</RelativeLayout>
