--- a/app/src/main/res/layout/activity_profile_image.xml
+++ b/app/src/main/res/layout/activity_profile_image.xml
@@ -35,7 +35,7 @@
         android:textColor="@color/colorA17"
         android:textSize="@dimen/total_recycler_text_size" />
 
-    <android.support.v4.view.ViewPager
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveViewPager
         android:id="@+id/profile_page_view_pager"
         android:layout_width="379dp"
         android:layout_height="460dp"
@@ -47,7 +47,7 @@
         android:id="@+id/profile_image_indicator"
         android:layout_width="411dp"
         android:layout_height="20dp"
-        android:layout_marginTop="630dp"
+        android:layout_marginTop="670dp"
         app:pageIndicatorColor="@color/colorA20" />
 
     <!--    <com.anton46.stepsview.StepsView
