--- a/app/src/main/res/layout/trophy_page_recycler_cardview_template.xml
+++ b/app/src/main/res/layout/trophy_page_recycler_cardview_template.xml
@@ -1,60 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/trophy_page_recycler_main_cardview"
-    android:layout_width="match_parent"
+    android:layout_width="379dp"
     android:layout_height="80dp"
     android:layout_margin="5dp"
-    android:elevation="@dimen/cardview_default_elevation"
-    app:cardCornerRadius="@dimen/btn_radius"
-    app:cardBackgroundColor="@color/colorA13">
+    android:background="@drawable/rounded_layout_shape">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/trophy_page_recycler_inner_cardview"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:layout_marginLeft="5dp"
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveCardView
+        android:id="@+id/trophy_page_recycler_inner_cardview"
+        android:layout_width="283dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="5dp"
+        android:background="@color/colorA17"
+        android:elevation="0dp"
+        app:cardCornerRadius="10dp">
+
+        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            android:id="@+id/trophy_page_recycler_inner_textview"
+            android:layout_width="283dp"
+            android:layout_height="30dp"
+            android:maxLines="1"
+            android:text=""
+            android:textSize="@dimen/total_recycler_text_size"
             android:layout_marginRight="5dp"
-            android:layout_weight="1.0"
-            android:background="@color/colorA17"
-            app:cardCornerRadius="10dp">
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="3dp"
+            android:gravity="center"/>
+    </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
-                android:id="@+id/trophy_page_recycler_inner_textview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:text=""
-                android:textSize="@dimen/total_recycler_text_size"
-                android:layout_margin="5dp"
-                android:layout_gravity="center"
-                android:gravity="center"/>
-        </android.support.v7.widget.CardView>
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:background="@drawable/register_image_veiw_shape"
+        android:layout_marginLeft="297dp"
+        android:layout_marginTop="3dp"
+        android:gravity="center">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/register_image_veiw_shape"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="7dp"
-            android:layout_margin="3dp"
-            android:gravity="center">
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+            android:id="@+id/trophy_page_recycler_inner_imageview"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="3dp"/>
+    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
-            <ImageView
-                android:id="@+id/trophy_page_recycler_inner_imageview"
-                android:layout_width="57dp"
-                android:layout_height="57dp"
-                android:scaleType="centerInside"/>
-        </LinearLayout>
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
