mohammadmahdi first final commit and push add inkIndicator responsive file to project and correct register fragments that should not have margin right and margin left

--- a/app/src/main/res/layout/activity_profile_image.xml
+++ b/app/src/main/res/layout/activity_profile_image.xml
@@ -43,7 +43,7 @@
         android:layout_marginTop="170dp"
         android:background="@color/colorA7" />
 
-    <com.pixelcan.inkpageindicator.InkPageIndicator
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveInkPageIndicator
         android:id="@+id/profile_image_indicator"
         android:layout_width="411dp"
         android:layout_height="20dp"
