--- a/app/src/main/res/layout/fragment_register_choose_profile_image.xml
+++ b/app/src/main/res/layout/fragment_register_choose_profile_image.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -92,4 +92,4 @@
         android:text="@string/next"
         android:textSize="@dimen/buttons_text_size" />
 
-</RelativeLayout>
+</com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
