--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -10,9 +10,10 @@
 
     <com.q20.projectsummer.ResponsiveViews.ResponsiveFrameLayout
         android:id="@+id/register_page_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_width="371dp"
+        android:layout_height="691dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:background="@drawable/register_fragment_shape"/>
 
 </RelativeLayout>
