mohammadmahdi third final commit and push edit attrs file

--- a/app/src/main/res/layout/profile_image_fragment_template.xml
+++ b/app/src/main/res/layout/profile_image_fragment_template.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -220,4 +220,4 @@
             android:scaleType="centerInside"/>
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
-</RelativeLayout>
+</com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
