--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -41,6 +41,14 @@
         <attr name="PolarCoordTheta"/>
         <attr name="UsePolar"/>
     </declare-styleable>
+    <declare-styleable name="ResponsiveInkPageIndicator">
+        <attr name="PolarCoordCenterX"/>
+        <attr name="PolarCoordCenterY"/>
+        <attr name="PolarCoordRad"/>
+        <attr name="PolarCoordTheta"/>
+        <attr name="UsePolar"/>
+    </declare-styleable>
+
     <declare-styleable name="ResponsiveRecyclerView">
         <attr name="PolarCoordCenterX"/>
         <attr name="PolarCoordCenterY"/>
@@ -64,6 +72,21 @@
     </declare-styleable>
 
     <declare-styleable name="ResponsiveEditText">
+        <attr name="PolarCoordCenterX"/>
+        <attr name="PolarCoordCenterY"/>
+        <attr name="PolarCoordRad"/>
+        <attr name="PolarCoordTheta"/>
+        <attr name="UsePolar"/>
+    </declare-styleable>
+    <declare-styleable name="ResponsiveViewPager">
+        <attr name="PolarCoordCenterX"/>
+        <attr name="PolarCoordCenterY"/>
+        <attr name="PolarCoordRad"/>
+        <attr name="PolarCoordTheta"/>
+        <attr name="UsePolar"/>
+    </declare-styleable>
+
+    <declare-styleable name="ResponsiveRoundedImageView">
         <attr name="PolarCoordCenterX"/>
         <attr name="PolarCoordCenterY"/>
         <attr name="PolarCoordRad"/>
