--- a/app/src/main/res/layout/fragment_new_game.xml
+++ b/app/src/main/res/layout/fragment_new_game.xml
@@ -4,29 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorA6">
+    android:background="@color/colorA6"
+    tools:context="com.q20.projectsummer.ui.NewGameDialog">
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/colorA13">
-
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/colorA2"/>
-
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
-
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="100dp"
-        android:background="@color/colorA3">
-
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
 
 </RelativeLayout>
